Update to Java 11, add Maven settings file.  Fixes #2.

--- a/ansible/dev.yaml
+++ b/ansible/dev.yaml
@@ -68,6 +68,9 @@
         - dev.java
       vars:
         dev_java_params:
+          nexus:
+            password: "{{accounts.nexus.password}}"
+            username: "{{accounts.nexus.username}}"
           username: "{{accounts.dev.username}}"
 
     - role: dev/misc
