--- a/ansible/group_vars/dev/main.yaml
+++ b/ansible/group_vars/dev/main.yaml
@@ -1,3 +1,4 @@
+gpg: "{{lookup('hashi_vault', 'token={{vault.token}} url={{vault.url}} secret=cubbyhole/dev/gpg')}}"
 paths:
   dev: /opt/devel
   projects: /opt/devel/projects
