Add VSCode lombok plugin.  Fixes #12.

--- a/ansible/dev.yaml
+++ b/ansible/dev.yaml
@@ -136,6 +136,7 @@
             - EditorConfig.EditorConfig
             - formulahendry.auto-close-tag
             - formulahendry.auto-rename-tag
+            - gabrielbb.vscode-lombok
             - golang.go
             - hashicorp.terraform
             - humao.rest-client
