Use sdkman for Java etc. installs.  Fixes #21.

--- a/ansible/dev.yaml
+++ b/ansible/dev.yaml
@@ -104,6 +104,12 @@
           shares: "{{shares.nfs}}"
           username: "{{accounts.dev.username}}"
 
+    - role: dev/sdkman
+      tags:
+        - dev.sdkman
+      dev_sdkman_params:
+        username: "{{accounts.dev.username}}"
+
     - role: dev/terraform
       tags:
         - dev.terraform
